--- a/Text_cleaning_re_nltk.ipynb
+++ b/Text_cleaning_re_nltk.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Text cleaning re nltk.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2XH1khbcuPmpYqWxKvV1/",
+      "authorship_tag": "ABX9TyMQHPgNhY3VjVc14d3Za3SC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,13 +510,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "da2e9459-68d3-420d-c7b6-2473936a664c"
+        "outputId": "6d1fba4d-9e34-44b3-d227-fe1befc513c3"
       },
       "source": [
         "import string\n",
         "import re\n",
         "from nltk.tokenize import word_tokenize\n",
         "from nltk.corpus import stopwords\n",
+        "from nltk.stem.porter import PorterStemmer\n",
         "# load data\n",
         "filename = 'pg5200.txt'\n",
         "file = open(filename, 'r')\n",
@@ -535,14 +536,16 @@
         "# filter out stop words\n",
         "stop_words = set(stopwords.words('english'))\n",
         "words = [w for w in words if not w in stop_words]\n",
+        "porter= PorterStemmer()\n",
+        "words =[ porter.stem(w) for w in words]\n",
         "print(words[:100])"
       ],
-      "execution_count": 41,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "['project', 'gutenberg', 'ebook', 'metamorphosis', 'franz', 'kafka', 'translated', 'david', 'wyllie', 'ebook', 'use', 'anyone', 'anywhere', 'cost', 'almost', 'restrictions', 'whatsoever', 'may', 'copy', 'give', 'away', 'reuse', 'terms', 'project', 'gutenberg', 'license', 'included', 'ebook', 'online', 'wwwgutenbergnet', 'copyrighted', 'project', 'gutenberg', 'ebook', 'details', 'please', 'follow', 'copyright', 'guidelines', 'file', 'title', 'metamorphosis', 'author', 'franz', 'kafka', 'translator', 'david', 'wyllie', 'release', 'date', 'august', 'ebook', 'first', 'posted', 'may', 'last', 'updated', 'may', 'language', 'english', 'start', 'project', 'gutenberg', 'ebook', 'metamorphosis', 'copyright', 'c', 'david', 'wyllie', 'metamorphosis', 'franz', 'kafka', 'translated', 'david', 'wyllie', 'one', 'morning', 'gregor', 'samsa', 'woke', 'troubled', 'dreams', 'found', 'transformed', 'bed', 'horrible', 'vermin', 'lay', 'armourlike', 'back', 'lifted', 'head', 'little', 'could', 'see', 'brown', 'belly', 'slightly', 'domed', 'divided']\n"
+            "['project', 'gutenberg', 'ebook', 'metamorphosi', 'franz', 'kafka', 'translat', 'david', 'wylli', 'ebook', 'use', 'anyon', 'anywher', 'cost', 'almost', 'restrict', 'whatsoev', 'may', 'copi', 'give', 'away', 'reus', 'term', 'project', 'gutenberg', 'licens', 'includ', 'ebook', 'onlin', 'wwwgutenbergnet', 'copyright', 'project', 'gutenberg', 'ebook', 'detail', 'pleas', 'follow', 'copyright', 'guidelin', 'file', 'titl', 'metamorphosi', 'author', 'franz', 'kafka', 'translat', 'david', 'wylli', 'releas', 'date', 'august', 'ebook', 'first', 'post', 'may', 'last', 'updat', 'may', 'languag', 'english', 'start', 'project', 'gutenberg', 'ebook', 'metamorphosi', 'copyright', 'c', 'david', 'wylli', 'metamorphosi', 'franz', 'kafka', 'translat', 'david', 'wylli', 'one', 'morn', 'gregor', 'samsa', 'woke', 'troubl', 'dream', 'found', 'transform', 'bed', 'horribl', 'vermin', 'lay', 'armourlik', 'back', 'lift', 'head', 'littl', 'could', 'see', 'brown', 'belli', 'slightli', 'dome', 'divid']\n"
           ],
           "name": "stdout"
         }
@@ -552,6 +555,48 @@
       "cell_type": "code",
       "metadata": {
         "id": "uHzggv0BlZh4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "5273b89d-a900-4301-c568-c632e71e14f7"
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "# list of text documents\n",
+        "text = [\"The quick brown fox jumped over the lazy dog.\"]\n",
+        "# create the transform\n",
+        "vectorizer = CountVectorizer()\n",
+        "# tokenize and build vocab\n",
+        "vectorizer.fit(text)\n",
+        "# summarize\n",
+        "print(vectorizer.vocabulary_)\n",
+        "# encode document\n",
+        "vector = vectorizer.transform(text)\n",
+        "# summarize encoded vector\n",
+        "print(vector.shape)\n",
+        "print(type(vector))\n",
+        "print(vector.toarray())"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'the': 7, 'quick': 6, 'brown': 0, 'fox': 2, 'jumped': 3, 'over': 5, 'lazy': 4, 'dog': 1}\n",
+            "(1, 8)\n",
+            "<class 'scipy.sparse.csr.csr_matrix'>\n",
+            "[[1 1 1 1 1 1 1 2]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uBt09Yn8tPWn",
         "colab_type": "code",
         "colab": {}
       },
